force-app/main/default/objects/Package_Log__c/Package_Log__c.object-meta.xml
<CustomObject>
    <label>Package Log</label>
    <nameField>
        <label>Package Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>