force-app/main/default/objects/Package_Log__c/fields/Dump__c.field-meta.xml
<CustomField>
    <fullName>Dump__c</fullName>
    <description>Exception stack trace</description>
    <label>Dump</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>