force-app/main/default/objects/Package_Log__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Class and line number where exception occured</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>