force-app/main/default/objects/Package_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Exception type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>