force-app/main/default/objects/Package_Log__c/listViews/Debug_Logs.listView-meta.xml
<ListView>
    <fullName>Debug_Logs</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Location__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Debug</value>
    </filters>
    <label>Debug Logs</label>
</ListView>